--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,10 +24,10 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.xhtml</welcome-file>
+		<welcome-file>productList.xhtml</welcome-file>
 	</welcome-file-list>
 	<error-page>
 		<exception-type>jakarta.faces.application.ViewExpiredException</exception-type>
-		<location>/index.xhtml</location>
+		<location>/productList.xhtml</location>
 	</error-page>
 </web-app>
